--- a/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
@@ -1,7 +1,7 @@
 .settings
     .row
         .item
-            +ActionLink('a', 'b') Change password
+            +ActionLink('account', 'resetPassword') Change password
         .item
             if self.isPreferencesVisible()
                 +ActionLink('a', 'b') Preferences
