--- a/Chalkable.Web/assets/jade/activities/school/Schools.jade
+++ b/Chalkable.Web/assets/jade/activities/school/Schools.jade
@@ -1,8 +1,9 @@
 .schools
     .action-bar.not-transparent
         .container.panel-bg
-            +ActionLink('schools', 'import', self.getDistrictId().valueOf()).chlk-add.opacity-button Import schools
-    +Grid('schools', 'page', self.items, [self.getDistrictId().valueOf()]).not-transparent
+            -districtId = self.getDistrictId() ? self.getDistrictId().valueOf() : null
+            +ActionLink('schools', 'import', districtId).chlk-add.opacity-button Import schools
+    +Grid('schools', 'page', self.items, [districtId]).not-transparent
         +GridHead()
             .th School Name
             .th Local ID
