--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -6,7 +6,7 @@
     .wrapper
         +ActionLink('announcement','add').fullwidth-button.add-new
         .buttons-row
-            +ActionLink('district', 'list').one-third-button.calendar(title="View Calendar") Calendar
+            +ActionLink('calendar', 'month').one-third-button.calendar(title="View Calendar") Calendar
             +ActionLink('messages', 'list').one-third-button.messages(title="View Messages") Messages
             +ActionLink('people', 'list').one-third-button.people(title="View People") People
         .buttons-row
