fixed import schools bug

--- a/Chalkable.Web/assets/jade/activities/school/import-school-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/school/import-school-dialog.jade
@@ -3,5 +3,8 @@
         span Import schools
     .x-window-body
         .list-container
+
             each item in self.items
-                +Checkbox(item.getName(), item.getId())=item.getName()
+                .row
+                    label item.getName()
+                    +Checkbox(item.getName(), item.getId())
