--- a/Chalkable.Web/assets/sass/partials/controls/_action-bar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_action-bar.scss
@@ -34,6 +34,7 @@ DIV#content-wrapper{
         background: transparent;
         margin: 0;
         border-width: 0 1px 0 1px;
+        text-align: center;
 
         &:hover, &.pressed{
           color: #2f7790;
