--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -18,6 +18,16 @@
       margin-bottom: 49px;
     }
 
+    .bottom-block{
+      .submit-btn{
+        margin-right: 20px;
+      }
+
+      BUTTON{
+        text-transform: uppercase;
+      }
+    }
+
     .attachments-and-applications {
       width: 600px;
 
