--- a/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
@@ -25,7 +25,7 @@ $star-size: 18px;
   }
 }
 
-DIV.feed-item {
+.feed-item {
   height: $height;
   padding-left: $stared-width;
   position: relative;
