--- a/Chalkable.Web/assets/jade/activities/class/TopBar.jade
+++ b/Chalkable.Web/assets/jade/activities/class/TopBar.jade
@@ -2,7 +2,7 @@ BUTTON(
     classId=self.getId(),
     index=self.getIndex(),
     class=self.isPressed() ? "pressed " : "",
-    type=self.getDisabled() ? "button" : "submit",
+    type=self.isDisabled() ? "button" : "submit",
     name="submitType",
     value="save"
 ).item.class-button.validate-skip
