--- a/Chalkable.Web/assets/jade/activities/feed/Feed.jade
+++ b/Chalkable.Web/assets/jade/activities/feed/Feed.jade
@@ -1,25 +1,26 @@
 .feed-container
-    -isNotStudent = true
+    -isNotStudent = true;
+    -console.info(self.items);
     .action-bar.not-transparent
         .container.panel-bg
             .feed-notifications Notifications
     +Grid('feed', 'page', self).not-transparent
         +GridBody()
             each item in self.items
-                    +ActionLink('announcement', 'view', item.getId().feed-item
-                        if isNotStudent
-                            .grades
-                        .bullet
-                            +ActionLink('announcement', 'star', item.getId()).star
-                            .item-type
-                                .tooltip-announcement.ann-type
-                                    .tooltip-content
-                                        Tooltip
-                                .attachment
-                                    .icon.blue.icon.announcements-type-7
-                                    .icon.black
-                                    h2.animated-header=item.getSubject()
-                                    p.animated=item.getShortContent()
-                                    .animated=item.getExpiresDate().toString('d/m/y')
-                                    .attachment-icon
-                                    .apps-icon
+                .feed-item
+                    if isNotStudent
+                        .grades
+                    .bullet
+                        +ActionLink('announcement', 'star', item.getId()).star
+                        .item-type
+                            .tooltip-announcement.ann-type
+                                .tooltip-content
+                                    Tooltip
+                            .attachment
+                                .icon.blue.icon.announcements-type-7
+                                .icon.black
+                                h2.animated-header=item.getSubject()
+                                p.animated=item.getShortContent()
+                                .animated=item.getExpiresDate().toString('d/m/y')
+                                .attachment-icon
+                                .apps-icon
