--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -13,6 +13,11 @@
   }
 }
 
+.back-button{
+  background: url(images/buttons/back.png) center center no-repeat !important;
+  width: 58px;
+}
+
 .simple-gray-button{
   height: 30px;
   width: 119px;
