--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -13,6 +13,7 @@
 @import "partials/main/announcement/_view";
 @import "partials/main/calendar/_calendar";
 @import "partials/main/calendar/_announcement";
+@import "partials/main/settings/_settings";
 
 BODY {
   DIV.page{
