--- a/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
@@ -4,7 +4,7 @@
             +ActionLink('account', 'resetPassword') Change password
         .item
             if self.isPreferencesVisible()
-                +ActionLink('a', 'b') Preferences
+                +ActionLink('settings', 'preferences') Preferences
         .item
             if self.isAppCategoriesVisible()
                 +ActionLink('appcategories', 'list') Application categories
