--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -10,6 +10,7 @@
 @import "partials/main/people/_list";
 @import "partials/main/feed/_list";
 @import "partials/main/announcement/_form";
+@import "partials/main/announcement/_view";
 @import "partials/main/calendar/_calendar";
 @import "partials/main/calendar/_announcement";
 @import "partials/main/settings/_settings";
@@ -88,6 +89,10 @@ INPUT, TEXTAREA{
   top: -11px;
   right: -16px;
   cursor: pointer;
+
+  &:hover{
+    opacity: 0.7;
+  }
 }
 
 //LOADERS
