--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -108,6 +108,14 @@ html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fiel
 
 .clear{clear:both;}
 
+.clear-right{clear:right;}
+
+.clear-left{clear:left;}
+
+.clear-right{clear:right;}
+
+.clear-left{clear:left;}
+
 .left{
   float: left;
 }
