--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -2,8 +2,7 @@
     -topData = self.getTopData();
     -announcement = self.getAnnouncement();
     -topItems = topData.getTopItems();
-    -classId = announcement.getClassId();
-    -console.info(classId);
+    -classId = announcement.getClassId() ? announcement.getClassId().valueOf() : null;
     -typeId = self.getSelectedTypeId();
     -attachments=[];
     -announcement.getAnnouncementAttachments().forEach(function(attachment){attachments.push(attachment.__PROTECTED)});
@@ -13,7 +12,8 @@
             selectedItemId=topData.getSelectedItemId(),
             pressAfterClick=!announcement.getState()
         ).classes-bar
-        .action-bar.not-transparent.buttons(class=classId ? '' : 'x-hidden')
+        -console.info(classId, 'class = ' + (classId ? '' : 'x-hidden'));
+        .action-bar.not-transparent.buttons(class=(classId ? '' : 'x-hidden'))
             .container.panel-bg
                 each item in classes
                     BUTTON(
@@ -24,9 +24,9 @@
                         name="submitType",
                         value="save"
                     ).action-button= item.getDescription()
-        .ann-form-container(class=classId && typeId ? '' : 'x-hidden')
+        .ann-form-container(class=(classId && typeId ? '' : 'x-hidden'))
             +RenderWith(announcement, chlk.templates.announcement.Announcement)
-        .choose-type(class=classId && !typeId ? '' : 'x-hidden')
-        .choose-class(class=classId ? 'x-hidden' : '')
+        .choose-type(class=(classId && !typeId ? '' : 'x-hidden'))
+        .choose-class(class=(classId ? 'x-hidden' : ''))
 
 
