--- a/Chalkable.Web/assets/jade/activities/settings/DeveloperSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/DeveloperSettings.jade
@@ -4,7 +4,7 @@
         #search-bar
     .wrapper
         .row
-            +ActionLink('account', 'profile') Profile
+            +ActionLink('account', 'profile', self.developerId.valueOf()) Profile
         .row
             +ActionLink('account', 'resetPassword') Delete application
 
