updated DbMaintenance page

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -1,3 +1,4 @@
+-attachments = self.getAnnouncementAttachments() || [];
 #attach-file-area.announcement-item.attach-file-area
     button#add-application.simple-gray-button Attach App
     button.simple-gray-button.file Attach File
