--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -189,3 +189,16 @@ INPUT, TEXTAREA{
 .loader-container{
   position: relative;
 }
+
+.loading-page{
+  background: url(images/loaders/horizontal.gif) center center no-repeat;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  >DIV{
+    display: none;
+  }
+}
