--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
@@ -16,7 +16,7 @@
                     .td=item.getScheduled().toString('d/m/y')
                     .td//=item.getCompleted().toString('d/m/y')
                     .td= item.getTaskState().toString()
-                    .td= item.getTaskType().toString()
+                    .td= item.getTaskType().valueOf()
                     .td.action-links
                         +ActionLink('backgroundtask', 'logs', item.getId()).profile
                         +ActionLink('backgroundtask', 'delete', item.getId()).remove
