--- a/Chalkable.Web/assets/jade/sidebars/DeveloperSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/DeveloperSidebar.jade
@@ -1,10 +1,10 @@
-+ActionLink('feed', 'list')#home-logo
++ActionLink('apps', 'details')#home-logo
 #sidebar-controls
     .search-wrapper
         #search-bar
     .wrapper
         .buttons-row
-            +ActionLink('calendar', 'month').one-third-button.apps-info(title="App info") App Info
+            +ActionLink('apps', 'details').one-third-button.apps-info(title="App info") App Info
             +ActionLink('messages', 'list').one-third-button.api(title="API") API Explorer
             +ActionLink('people', 'list').one-third-button.docs(title="Docs") Docs
         .buttons-row
