--- a/Chalkable.Web/assets/jade/activities/apps/app-category-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-category-dialog.jade
@@ -3,7 +3,7 @@
         span Category
     .x-window-body
             +ActionForm('appcategories', 'save')
-                input(type="hidden",name="id", value=self.id)
+                +Hidden("id", self.id)
                 .x-form-field
                     label Name:
                     input(type="text",name="name", value=self.name)
