--- a/Chalkable.Web/assets/jade/activities/district/district-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/district/district-dialog.jade
@@ -4,7 +4,7 @@
     .x-window-body
         .general-info
             +ActionForm('district', 'save')
-                input(type="hidden",name="id", value=self.id)
+                +Hidden("id", self.id)
                 .x-form-field
                     label Name:
                     input(type="text",name="name", value=self.name)
