--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -15,6 +15,7 @@
 @import "partials/main/calendar/_announcement";
 @import "partials/main/settings/_settings";
 @import "partials/main/developer/_info";
+@import "partials/main/developer/_app";
 @import "partials/main/popups/_popups";
 
 
