--- a/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
@@ -2,7 +2,7 @@ mixin SlideCheckbox(name, val)
     .slide-checkbox
         .wrapper
             +Checkbox(name, val)
-            label
+            label(for=name)
 
 
 
