Fixed DB backup/restore

--- a/Chalkable.Web/Views/Shared/_Layout.cshtml
+++ b/Chalkable.Web/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
     <script type="text/javascript" src="@Url.StaticContent("/Scripts/jquery/jquery.scrollTo.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/jquery/validation/languages/jquery.validationEngine-en.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/jquery/validation/jquery.validationEngine.js")"></script>
+    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/datepicker/jquery-timepicker.js")"></script>
 
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/shared.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/Scripts/chlk-messages.js")"></script>
