--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
@@ -12,9 +12,9 @@
             each item in self.items
                 +GridRow()
                     .td= item.getId().valueOf()
-                    .td//=item.getCreated().toString('d/m/y')
-                    .td=item.getScheduled().toString('d/m/y')
-                    .td//=item.getCompleted().toString('d/m/y')
+                    .td=item.getCreated().toString('dd/m/yy hh:min:ss')
+                    .td=item.getScheduled().toString('dd/m/yy hh:min:ss')
+                    .td=item.getCompleted() ? item.getCompleted().toString('d/m/y') : ""
                     .td= item.getTaskState().toString()
                     .td= item.getTaskType().valueOf()
                     .td.action-links
